src/frontend/antlr4cpp_generated_src/TIP/TIPParser.cpp

// Generated from TIP.g4 by ANTLR 4.13.1


#include "TIPVisitor.h"

#include "TIPParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TIPParserStaticData final {
  TIPParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TIPParserStaticData(const TIPParserStaticData&) = delete;
  TIPParserStaticData(TIPParserStaticData&&) = delete;
  TIPParserStaticData& operator=(const TIPParserStaticData&) = delete;
  TIPParserStaticData& operator=(TIPParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tipParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
TIPParserStaticData *tipParserStaticData = nullptr;

void tipParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tipParserStaticData != nullptr) {
    return;
  }
#else
  assert(tipParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TIPParserStaticData>(
    std::vector<std::string>{
      "program", "function", "declaration", "nameDeclaration", "expr", "recordExpr", 
      "fieldExpr", "statement", "assignStmt", "blockStmt", "whileStmt", 
      "ifStmt", "outputStmt", "errorStmt", "returnStmt", "forStmt", "forRangeStmt", 
      "incrementStmt", "decrementStmt"
    },
    std::vector<std::string>{
      "", "'('", "','", "')'", "'{'", "'}'", "';'", "'['", "']'", "'of'", 
      "'.'", "'not'", "'&'", "'#'", "'\\u003F'", "':'", "'='", "'..'", "'by'", 
      "'++'", "'--'", "'*'", "'/'", "'%'", "'+'", "'-'", "'>'", "'>='", 
      "'<'", "'<='", "'=='", "'!='", "", "'alloc'", "'input'", "'while'", 
      "'if'", "'else'", "'var'", "'return'", "'null'", "'output'", "'error'", 
      "'and'", "'or'", "'true'", "'false'", "'for'", "'poly'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "MUL", "DIV", "MOD", "ADD", "SUB", "GT", "GTE", "LT", 
      "LTE", "EQ", "NE", "NUMBER", "KALLOC", "KINPUT", "KWHILE", "KIF", 
      "KELSE", "KVAR", "KRETURN", "KNULL", "KOUTPUT", "KERROR", "KAND", 
      "KOR", "KTRUE", "KFALSE", "KFOR", "KPOLY", "IDENTIFIER", "WS", "BLOCKCOMMENT", 
      "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tipParserStaticData = staticData.release();
}

}

TIPParser::TIPParser(TokenStream *input) : TIPParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TIPParser::TIPParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TIPParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tipParserStaticData->atn, tipParserStaticData->decisionToDFA, tipParserStaticData->sharedContextCache, options);
}

TIPParser::~TIPParser() {
  delete _interpreter;
}

const atn::ATN& TIPParser::getATN() const {
  return *tipParserStaticData->atn;
}

std::string TIPParser::getGrammarFileName() const {
  return "TIP.g4";
}

const std::vector<std::string>& TIPParser::getRuleNames() const {
  return tipParserStaticData->ruleNames;
}

const dfa::Vocabulary& TIPParser::getVocabulary() const {
  return tipParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TIPParser::getSerializedATN() const {
  return tipParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

TIPParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TIPParser::FunctionContext *> TIPParser::ProgramContext::function() {
  return getRuleContexts<TIPParser::FunctionContext>();
}

TIPParser::FunctionContext* TIPParser::ProgramContext::function(size_t i) {
  return getRuleContext<TIPParser::FunctionContext>(i);
}


size_t TIPParser::ProgramContext::getRuleIndex() const {
  return TIPParser::RuleProgram;
}


std::any TIPParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

TIPParser::ProgramContext* TIPParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, TIPParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(38);
      function();
      setState(41); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TIPParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

TIPParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TIPParser::NameDeclarationContext *> TIPParser::FunctionContext::nameDeclaration() {
  return getRuleContexts<TIPParser::NameDeclarationContext>();
}

TIPParser::NameDeclarationContext* TIPParser::FunctionContext::nameDeclaration(size_t i) {
  return getRuleContext<TIPParser::NameDeclarationContext>(i);
}

TIPParser::ReturnStmtContext* TIPParser::FunctionContext::returnStmt() {
  return getRuleContext<TIPParser::ReturnStmtContext>(0);
}

tree::TerminalNode* TIPParser::FunctionContext::KPOLY() {
  return getToken(TIPParser::KPOLY, 0);
}

std::vector<TIPParser::DeclarationContext *> TIPParser::FunctionContext::declaration() {
  return getRuleContexts<TIPParser::DeclarationContext>();
}

TIPParser::DeclarationContext* TIPParser::FunctionContext::declaration(size_t i) {
  return getRuleContext<TIPParser::DeclarationContext>(i);
}

std::vector<TIPParser::StatementContext *> TIPParser::FunctionContext::statement() {
  return getRuleContexts<TIPParser::StatementContext>();
}

TIPParser::StatementContext* TIPParser::FunctionContext::statement(size_t i) {
  return getRuleContext<TIPParser::StatementContext>(i);
}


size_t TIPParser::FunctionContext::getRuleIndex() const {
  return TIPParser::RuleFunction;
}


std::any TIPParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

TIPParser::FunctionContext* TIPParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 2, TIPParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    nameDeclaration();
    setState(44);
    match(TIPParser::T__0);
    setState(53);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TIPParser::IDENTIFIER) {
      setState(45);
      nameDeclaration();
      setState(50);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == TIPParser::T__1) {
        setState(46);
        match(TIPParser::T__1);
        setState(47);
        nameDeclaration();
        setState(52);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(55);
    match(TIPParser::T__2);
    setState(57);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TIPParser::KPOLY) {
      setState(56);
      match(TIPParser::KPOLY);
    }
    setState(59);
    match(TIPParser::T__3);

    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TIPParser::KVAR) {
      setState(60);
      declaration();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

    setState(69);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 817070319089810) != 0)) {
      setState(66);
      statement();
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(72);
    returnStmt();
    setState(73);
    match(TIPParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

TIPParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TIPParser::DeclarationContext::KVAR() {
  return getToken(TIPParser::KVAR, 0);
}

std::vector<TIPParser::NameDeclarationContext *> TIPParser::DeclarationContext::nameDeclaration() {
  return getRuleContexts<TIPParser::NameDeclarationContext>();
}

TIPParser::NameDeclarationContext* TIPParser::DeclarationContext::nameDeclaration(size_t i) {
  return getRuleContext<TIPParser::NameDeclarationContext>(i);
}


size_t TIPParser::DeclarationContext::getRuleIndex() const {
  return TIPParser::RuleDeclaration;
}


std::any TIPParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TIPParser::DeclarationContext* TIPParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, TIPParser::RuleDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(TIPParser::KVAR);
    setState(76);
    nameDeclaration();
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TIPParser::T__1) {
      setState(77);
      match(TIPParser::T__1);
      setState(78);
      nameDeclaration();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(TIPParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameDeclarationContext ------------------------------------------------------------------

TIPParser::NameDeclarationContext::NameDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TIPParser::NameDeclarationContext::IDENTIFIER() {
  return getToken(TIPParser::IDENTIFIER, 0);
}


size_t TIPParser::NameDeclarationContext::getRuleIndex() const {
  return TIPParser::RuleNameDeclaration;
}


std::any TIPParser::NameDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitNameDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TIPParser::NameDeclarationContext* TIPParser::nameDeclaration() {
  NameDeclarationContext *_localctx = _tracker.createInstance<NameDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, TIPParser::RuleNameDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(TIPParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

TIPParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t TIPParser::ExprContext::getRuleIndex() const {
  return TIPParser::RuleExpr;
}

void TIPParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ArrayOfConstructorContext ------------------------------------------------------------------

std::vector<TIPParser::ExprContext *> TIPParser::ArrayOfConstructorContext::expr() {
  return getRuleContexts<TIPParser::ExprContext>();
}

TIPParser::ExprContext* TIPParser::ArrayOfConstructorContext::expr(size_t i) {
  return getRuleContext<TIPParser::ExprContext>(i);
}

TIPParser::ArrayOfConstructorContext::ArrayOfConstructorContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::ArrayOfConstructorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitArrayOfConstructor(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayRefExprContext ------------------------------------------------------------------

std::vector<TIPParser::ExprContext *> TIPParser::ArrayRefExprContext::expr() {
  return getRuleContexts<TIPParser::ExprContext>();
}

TIPParser::ExprContext* TIPParser::ArrayRefExprContext::expr(size_t i) {
  return getRuleContext<TIPParser::ExprContext>(i);
}

TIPParser::ArrayRefExprContext::ArrayRefExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::ArrayRefExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitArrayRefExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayPrefixLengthContext ------------------------------------------------------------------

TIPParser::ExprContext* TIPParser::ArrayPrefixLengthContext::expr() {
  return getRuleContext<TIPParser::ExprContext>(0);
}

TIPParser::ArrayPrefixLengthContext::ArrayPrefixLengthContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::ArrayPrefixLengthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitArrayPrefixLength(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NullExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::NullExprContext::KNULL() {
  return getToken(TIPParser::KNULL, 0);
}

TIPParser::NullExprContext::NullExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::NullExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitNullExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TrueExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::TrueExprContext::KTRUE() {
  return getToken(TIPParser::KTRUE, 0);
}

TIPParser::TrueExprContext::TrueExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::TrueExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitTrueExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AllocExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::AllocExprContext::KALLOC() {
  return getToken(TIPParser::KALLOC, 0);
}

TIPParser::ExprContext* TIPParser::AllocExprContext::expr() {
  return getRuleContext<TIPParser::ExprContext>(0);
}

TIPParser::AllocExprContext::AllocExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::AllocExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitAllocExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AdditiveExprContext ------------------------------------------------------------------

std::vector<TIPParser::ExprContext *> TIPParser::AdditiveExprContext::expr() {
  return getRuleContexts<TIPParser::ExprContext>();
}

TIPParser::ExprContext* TIPParser::AdditiveExprContext::expr(size_t i) {
  return getRuleContext<TIPParser::ExprContext>(i);
}

tree::TerminalNode* TIPParser::AdditiveExprContext::ADD() {
  return getToken(TIPParser::ADD, 0);
}

tree::TerminalNode* TIPParser::AdditiveExprContext::SUB() {
  return getToken(TIPParser::SUB, 0);
}

TIPParser::AdditiveExprContext::AdditiveExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::AdditiveExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitAdditiveExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeRefExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::DeRefExprContext::MUL() {
  return getToken(TIPParser::MUL, 0);
}

TIPParser::ExprContext* TIPParser::DeRefExprContext::expr() {
  return getRuleContext<TIPParser::ExprContext>(0);
}

TIPParser::DeRefExprContext::DeRefExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::DeRefExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitDeRefExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenExprContext ------------------------------------------------------------------

TIPParser::ExprContext* TIPParser::ParenExprContext::expr() {
  return getRuleContext<TIPParser::ExprContext>(0);
}

TIPParser::ParenExprContext::ParenExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::ParenExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitParenExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TernaryExprContext ------------------------------------------------------------------

std::vector<TIPParser::ExprContext *> TIPParser::TernaryExprContext::expr() {
  return getRuleContexts<TIPParser::ExprContext>();
}

TIPParser::ExprContext* TIPParser::TernaryExprContext::expr(size_t i) {
  return getRuleContext<TIPParser::ExprContext>(i);
}

TIPParser::TernaryExprContext::TernaryExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::TernaryExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitTernaryExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FalseExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::FalseExprContext::KFALSE() {
  return getToken(TIPParser::KFALSE, 0);
}

TIPParser::FalseExprContext::FalseExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::FalseExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitFalseExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunAppExprContext ------------------------------------------------------------------

std::vector<TIPParser::ExprContext *> TIPParser::FunAppExprContext::expr() {
  return getRuleContexts<TIPParser::ExprContext>();
}

TIPParser::ExprContext* TIPParser::FunAppExprContext::expr(size_t i) {
  return getRuleContext<TIPParser::ExprContext>(i);
}

TIPParser::FunAppExprContext::FunAppExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::FunAppExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitFunAppExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AccessExprContext ------------------------------------------------------------------

TIPParser::ExprContext* TIPParser::AccessExprContext::expr() {
  return getRuleContext<TIPParser::ExprContext>(0);
}

tree::TerminalNode* TIPParser::AccessExprContext::IDENTIFIER() {
  return getToken(TIPParser::IDENTIFIER, 0);
}

TIPParser::AccessExprContext::AccessExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::AccessExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitAccessExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RecordRuleContext ------------------------------------------------------------------

TIPParser::RecordExprContext* TIPParser::RecordRuleContext::recordExpr() {
  return getRuleContext<TIPParser::RecordExprContext>(0);
}

TIPParser::RecordRuleContext::RecordRuleContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::RecordRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitRecordRule(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NegNumberContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::NegNumberContext::SUB() {
  return getToken(TIPParser::SUB, 0);
}

tree::TerminalNode* TIPParser::NegNumberContext::NUMBER() {
  return getToken(TIPParser::NUMBER, 0);
}

TIPParser::NegNumberContext::NegNumberContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::NegNumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitNegNumber(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InputExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::InputExprContext::KINPUT() {
  return getToken(TIPParser::KINPUT, 0);
}

TIPParser::InputExprContext::InputExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::InputExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitInputExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RelationalExprContext ------------------------------------------------------------------

std::vector<TIPParser::ExprContext *> TIPParser::RelationalExprContext::expr() {
  return getRuleContexts<TIPParser::ExprContext>();
}

TIPParser::ExprContext* TIPParser::RelationalExprContext::expr(size_t i) {
  return getRuleContext<TIPParser::ExprContext>(i);
}

tree::TerminalNode* TIPParser::RelationalExprContext::GT() {
  return getToken(TIPParser::GT, 0);
}

tree::TerminalNode* TIPParser::RelationalExprContext::GTE() {
  return getToken(TIPParser::GTE, 0);
}

tree::TerminalNode* TIPParser::RelationalExprContext::LT() {
  return getToken(TIPParser::LT, 0);
}

tree::TerminalNode* TIPParser::RelationalExprContext::LTE() {
  return getToken(TIPParser::LTE, 0);
}

TIPParser::RelationalExprContext::RelationalExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::RelationalExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitRelationalExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::NumExprContext::NUMBER() {
  return getToken(TIPParser::NUMBER, 0);
}

TIPParser::NumExprContext::NumExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::NumExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitNumExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::VarExprContext::IDENTIFIER() {
  return getToken(TIPParser::IDENTIFIER, 0);
}

TIPParser::VarExprContext::VarExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::VarExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitVarExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NotExprContext ------------------------------------------------------------------

TIPParser::ExprContext* TIPParser::NotExprContext::expr() {
  return getRuleContext<TIPParser::ExprContext>(0);
}

TIPParser::NotExprContext::NotExprContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::NotExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitNotExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayConstructorContext ------------------------------------------------------------------

std::vector<TIPParser::ExprContext *> TIPParser::ArrayConstructorContext::expr() {
  return getRuleContexts<TIPParser::ExprContext>();
}

TIPParser::ExprContext* TIPParser::ArrayConstructorContext::expr(size_t i) {
  return getRuleContext<TIPParser::ExprContext>(i);
}

TIPParser::ArrayConstructorContext::ArrayConstructorContext(ExprContext *ctx) { copyFrom(ctx); }


std::any TIPParser::ArrayConstructorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TIPVisitor*>(visitor))
    return parserVisitor->visitArrayConstructor(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NegExprContext ------------------------------------------------------------------

tree::TerminalNode* TIPParser::NegExprContext::SUB() {
  return getToken(TIPParser::SUB, 0);
}

TIPParser::ExprContext* TIPParser::NegExprContext::expr() {
  return getRuleContext<TIPParser::ExprContext>(0);
}

TIPParser::NegExprContext::NegExprContext(ExprContext *ctx) { copyFrom(ctx); }

